@@ -51,6 +51,7 @@
   * Fixed a problem in the lsl.imaging.deconv module when computing the positions of RadioFixedBody instances
   * Fixed a bug in the lsl.sim.vis.buildSimArray() function that caused the simulation array date not to match the input if 'jd=None'
   * Fixed a bug in the lsl.sim.vis.buildSimData() function that caused the wrong antenna gain pattern to be applied
+  * Fixed a bug in the lsl.imaging.utils module that causes the AntennaArray instances returned by the CorrelatedData readers to be out-of-order in some cases
 
 1.0.2
   * Added documentation for LDP to the Sphinx build system
